--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
 
     <title>Custom App</title>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
 
 <link
   rel="stylesheet"
@@ -14,9 +14,9 @@
   crossorigin="anonymous"
 />
 
-<script
+<!-- <script
   src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
-  crossorigin></script>
+  crossorigin></script> -->
   <link href="../src/index.css" type="text/css" />
   
   </head>
@@ -27,6 +27,6 @@
     <div id="top_header"></div>
     <div id="root"></div>
 
-    <script src="../src/index.js" type="text/babel"></script>
+    <script src="../src/index.js"></script>
   </body>
 </html>
